[gd_scene load_steps=4 format=3 uid="uid://bbo88fpqwdof7"]

[ext_resource type="Script" path="res://UI/Setting/setting.gd" id="1_rfnav"]
[ext_resource type="Theme" uid="uid://b1bbott1b53v8" path="res://UI/Theme/game_theme.tres" id="1_vkk38"]
[ext_resource type="PackedScene" uid="uid://dc05fgasrsph3" path="res://UI/Setting/volume_slider.tscn" id="2_58vm0"]

[node name="Setting" type="Control"]
clip_contents = true
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vkk38")
script = ExtResource("1_rfnav")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="BtnBack" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 42.0
offset_bottom = 37.0
text = "返回"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -38.5
offset_right = 116.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label1" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "主音量"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VolumeSlider1" parent="VBoxContainer/GridContainer" instance=ExtResource("2_58vm0")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "音乐"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VolumeSlider2" parent="VBoxContainer/GridContainer" instance=ExtResource("2_58vm0")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
bus = &"BGM"

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "音效"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VolumeSlider3" parent="VBoxContainer/GridContainer" instance=ExtResource("2_58vm0")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
bus = &"SFX"

[node name="BtnReset" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "恢复默认"
